--- a/admin/admin.css
+++ b/admin/admin.css
@@ -11,7 +11,6 @@ body {
   transform: scale(1.05);
 }
 
-
 .cart-item {
   display: flex;
   justify-content: space-between;
@@ -28,7 +27,6 @@ body {
   text-align: right;
   padding-top: 10px;
 }
-
 
 .container h2 {
   margin-bottom: 20px;
@@ -57,19 +55,56 @@ body {
   margin-top: 30px;
 }
 
-#admin-product-list .product-card {
+#admin-product-list .card {
   border: 1px solid #ddd;
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-#admin-product-list .product-card .card-body {
+#admin-product-list .card-body {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
 }
 
-#admin-product-list .btn-warning, #admin-product-list .btn-danger {
-  margin-left: 5px;
+#admin-product-list .btn-group {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#admin-product-list .btn {
+  padding: 0.375rem 0.75rem;
+  font-size: 0.875rem;
+}
+
+#admin-product-list .btn-success {
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+#admin-product-list .btn-success:hover {
+  background-color: #218838;
+  border-color: #1e7e34;
+}
+
+#admin-product-list .btn-danger {
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+#admin-product-list .btn-danger:hover {
+  background-color: #c82333;
+  border-color: #bd2130;
+}
+
+.input-group-text {
+  background-color: #28a745;
+  color: white;
+  border: 1px solid #28a745;
+}
+
+#product-price {
+  border-left: none;
 }
